# clarity-loop-backend

./: .cursorrules  .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  .modalignore  .pre-commit-config.yaml  .redocly.yml  .safety-project.ini  .spectral.yml  .windsurfrules  01-VERTICAL-SLICE-IMPLEMENTATION-GUIDE.md  02-ERROR-DRIVEN-DEVELOPMENT-METHODOLOGY.md  03-TESTING-AND-LINTING-INTEGRATION-STRATEGY.md  04-TDD-PROGRESSION-PLAN.md  05-BUILD-PROCESS-CHECKLIST.md  ACTUAL_API_REFERENCE.md  ACTUAL_PRODUCTION_AUDIT.md  AGENT_HANDOFF_PAT_HEALTH_CHECK_FIX.md  AGENT_TASK.md  AGENT_TASK_MERGED.md  APPLE_ACTIGRAPHY_PROXY.md  APPLE_HEALTHKIT.md  APPLE_HEALTHKIT_DEFINITIVE_IMPLEMENTATION.md  ARCHITECTURE-DEPENDENCY-GUIDELINES.md  ARCHITECTURE_DEBT.md  AUTHENTICATION_FIX_SUMMARY.md  AUTHENTICATION_FLOW.md  AWS_BEST_PRACTICES_2025.md  AWS_DEPLOYMENT_LIVE.md  AWS_DEPLOYMENT_SUMMARY.md  AWS_MIGRATION_COMPLETE.md  AWS_MIGRATION_GUIDE.md  AWS_SETUP_GUIDE.md  BACKEND-AUTH-REQUIREMENTS.md  BACKEND_PRODUCTION_READY_REPORT.md  BIPOLAR_ENHANCEMENT_PLAN.md  BIPOLAR_FINAL.md  BIPOLAR_GOD.md  BIPOLAR_MOOD_WATCH.md  (+203 more)
.claude/: config.json
.github/workflows/: chaos-tests.yml  ci-with-model-signing-example.yml  ci.yml  deploy.yml  example-model-pipeline.yml  lint.yml  model-signing.yml  security-test-trigger.txt  security.yml
.roo/rules/: dev_workflow.md  taskmaster.md
.swarm-worktrees/: check-swarm-status.sh
.taskmaster/: config.json
.taskmaster/docs/: deployment_prd.txt  prd.txt  test-suite-prd.txt
BANGER_GUIDE/: README_SWIFT_INTEGRATION.md  SWIFTDATA_BACKEND_WRAPPER.md  SWIFT_FRONTEND_INTEGRATION_GUIDE.md
archive/aws-docs/: AWS_DEPLOYMENT_PLAN.md
archive/deployment-scripts/: ecs-task-definition-full-v2.json  ecs-task-definition-full-v3.json
archive/dockerfiles/: Dockerfile.aws.optimized  Dockerfile.aws.simple  Dockerfile.super-minimal
archive/test-scripts/: test_auth_definitive.py  test_aws_deployment.py  test_aws_deployment_comprehensive.py  test_aws_quick.py  test_aws_simple.py  test_deployment.py  test_production_ready.py
ci-cd/: README.md
config/: .safety-project.ini  logging_config.yaml  mania_risk_config.yaml
demo_data/: README.md
demo_data/clinical/: acute_manic_scenario.json  baseline_scenario.json  complete_episode_scenario.json  prodromal_scenario.json  recovery_scenario.json  scenarios_summary.json
demo_data/healthkit/: activities.json  health_metrics.json  predictions.json  reports.json  users.json
dev-config/: filebrowser.json  fluentd.conf  prometheus.yml
dev-scripts/: dev-entrypoint.sh  localstack-init.sh  pgadmin-servers.json  postgres-init.sql  seed-data.py
docs/: 01-overview.md  02-api-reference.md  03-ai-models.md  AUTHENTICATION_FIX_PLAN.md  DATA_SOURCES.md  DEMO_IMPLEMENTATION_PLAN.md  DEMO_SYSTEM_DOSSIER.md  DEPLOYMENT.md  DOCUMENTATION_TOOLS.md  ML_MODEL_MANAGEMENT.md  README.md  SETUP_FIREBASE.md  blueprint.md  bulletproof-startup.md  clinical-vision.md  documentation-guide.md  external-links.md  feature-flags-enhanced.md  gcp-credentials-setup.md  mania-risk-logging.md  model-signing-quickstart.md  model-signing.md  quickstart.md  secrets-configuration.md
docs/api/: README.md  authentication.md  endpoints.md  explainability.md  health-data.md  insights.md  ml-endpoints.md  openapi-cleaned.json  openapi-cleaned.yaml  openapi.json  user-management.md
docs/architecture/: ARCHITECTURAL-IMPROVEMENTS.md  README.md  (+4 more)
examples/: __init__.py  feature_flags_usage.py
observability/: README.md  alert-rules.yml  alertmanager.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  promtail-config.yaml
ops/: CI_CD_SMOKE_TEST_FIX.md  DEPLOYMENT.md  DEPLOYMENT_STATUS_REPORT.md  OIDC_FIX_SUMMARY.md  PRE_DEPLOYMENT_CHECKLIST.md  acm-dns-validation.md  add-cofounder-aws-access.sh  cleanup-ops-directory.sh  create-ecs-service.sh  create-presigned-urls-for-matt.sh  deploy-v1.sh  deploy-v2.sh  deploy-v3.sh  deploy-waf-rate-limiting.sh  deploy.sh  ecs-task-definition-amd64.json  ecs-task-definition-clean.json  ecs-task-definition-fixed.json  ecs-task-definition-prod.json  ecs-task-definition.json  fix-github-actions-oidc-complete-2025.sh  fix-github-actions-permissions.sh  fix-oidc-final-2025.sh  github-actions-deploy-role-policy.json  iam-audit-summary.md  iam-compliance-matrix.md  matt-cofounder-credentials.md  monitor-cert-validation.sh  monitor-deployment.sh  prometheus.yml  s3-lifecycle-policy.json  test-waf-rate-limiting.sh
research/: README.md
scripts/: README.md  __init__.py  api_test_suite.py  calculate_model_checksums.py  calculate_transformer_checksums.py  check_circular_imports.py  check_modal_auth.sh  clean-git-history.sh  clean_openapi.py  create_cognito_demo_user.py  create_model_symlinks.sh  create_placeholder_models.py  create_test_user.sh  decode_jwt.py  demo_deployment.sh  deploy_demo_data.sh  download_models.sh  entrypoint.sh  final_linting_fix.py  fix_all_f821_errors.py  fix_final_issues.py  fix_firestore_exceptions.py  fix_linting.py  fix_logging_fstrings.py  fix_remaining_linting.py  generate_chat_context.py  generate_clinical_scenarios.py  generate_demo_data.py  generate_openapi.py  lint_progress.py  model_integrity_cli.py  prd.txt  run_demo.py  run_full_demo_test.py  sign_model.py  simple_f821_fix.py  smoke-test-auth-suite.sh  smoke-test-auth.sh  smoke-test.sh  startup_validator.py  (+13 more)
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  task_026.txt  task_027.txt  task_028.txt  task_029.txt  task_030.txt  task_031.txt  task_032.txt  task_033.txt  task_034.txt  task_035.txt  task_036.txt  task_037.txt  task_038.txt
tests/: TEST_HARNESS_GUIDE.md  __init__.py  base.py  conftest.py  e2e.md  test_firebase_auth_integration.py  test_model_signing.py  test_model_signing.py.disabled  test_startup.py  test_version.py
(+474 files in other folders)
